--- a/html5up-story/index.html
+++ b/html5up-story/index.html
@@ -27,20 +27,20 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/phoeniximage.jpg" alt="phoenix skyline" />
 						</div>
 					</section>
 
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Sweet Eats Bakery</h2>
+							<p>This project was a study on html and css.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://codepen.io/stevenp19/pen/bZaMRX" class="button">View Code</a></li>
 							</ul>
 						</div>
-						<div class="image">
+						<div class="image"></div>
 							<img src="images/spotlight01.jpg" alt="" />
 						</div>
 					</section>
