--- a/html5up-story/index.html
+++ b/html5up-story/index.html
@@ -40,22 +40,22 @@
 								<li><a href="https://codepen.io/stevenp19/pen/bZaMRX" class="button">View Code</a></li>
 							</ul>
 						</div>
-						<div class="image"></div>
-							<img src="images/spotlight01.jpg" alt="" />
+						<div class="image">
+							<img src="images/cupcake.jpg" alt="cupcake" />
 						</div>
 					</section>
 
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Great Idea</h2>
+							<p>Here is a project where we were working on the box model in CSS.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">View Code</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/greatideasplash.jpg" alt="" />
 						</div>
 					</section>
 
