--- a/html5up-story/index.html
+++ b/html5up-story/index.html
@@ -35,7 +35,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Sweet Eats Bakery</h2>
-							<p>This project was a study on html and css.</p>
+							<p> On This project the technology I used was html and css.</p>
 							<ul class="actions stacked">
 								<li><a href="https://codepen.io/stevenp19/pen/bZaMRX" class="button">View Code</a></li>
 							</ul>
