--- a/html5up-story/index.html
+++ b/html5up-story/index.html
@@ -49,7 +49,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Great Idea</h2>
-							<p>Here is a project where we were working on the box model in CSS.</p>
+							<p>Here is a project where the technology I used was HTML and the CSS/Box Model</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">View Code</a></li>
 							</ul>
